# unorthodox

./: .gitmodules  features-and-todo.md  meson.build  readme.md
benchmarks/: math_basics.cpp  meson.build
examples/: cppevents-server.cpp  files_and_buffers.cpp  meson.build  pipes.cpp  window.cpp
examples/gfx/: opengl-es-renderer.cpp  opengl-es-renderer.hpp  sdl2-window.cpp  sdl2-window.hpp
include/unorthodox/: allocators.hpp  basic_types.hpp  buffer.hpp  colour.hpp  concepts.hpp  dynamic_array.hpp  error_codes.hpp  event.hpp  extra_type_traits.hpp  file.hpp  gfxio.hpp  math.hpp  sysobject.hpp  util.hpp  video_io.hpp  window.hpp
include/unorthodox/geometry/: shapes.hpp
include/unorthodox/geometry/shapes/: common.hpp  quad.hpp  triangle.hpp
include/unorthodox/graphics/: canvas.hpp  renderer.hpp  util.hpp  vertex.hpp  window.hpp
include/unorthodox/math/: fixed_point.hpp
include/unorthodox/network/: sockets.hpp  sockets_os_posix.hpp  sockets_os_win32.hpp
include/unorthodox/unix/: pipe.hpp
playground/event-graphics-stuff/: event.cpp  event.hpp  window.cpp  window.hpp
sandbox/: string.cpp
src/: event.cpp  meson.build
src/graphics/: meson.build
src/graphics/glfw_target/: window.cpp
subprojects/: benchmark.wrap
subprojects/renderers/: README.md
tests/: colour.cpp  dynamic_array.cpp  math_basics.cpp  meson.build  tcp_tests.cpp
