window_example_sources = [
  'window.cpp',
]

window_example_dependencies = [
  unorthodox_graphics_lib_dep
]

window_example = executable('window',
  window_example_sources,
  include_directories : unorthodox_include_path,
  dependencies: window_example_dependencies,
)

pipe_example_sources = [
  'pipes.cpp',
]

pipe_example_dependencies = [
]

pipe_example = executable('pipe',
  pipe_example_sources,
  include_directories : unorthodox_include_path,
  dependencies: pipe_example_dependencies,
)

file_example_sources = [
    'files_and_buffers.cpp',
]

file_example_dependencies = [
]

file_example = executable('files_and_buffers',
  file_example_sources,
  include_directories : unorthodox_include_path,
  dependencies: file_example_dependencies,
)


# Network examples
